--- a/package.json
+++ b/package.json
@@ -10,26 +10,29 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^2.1.0",
+    "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-native-picker/picker": "2.11.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
-    "expo": "~52.0.23",
-    "expo-linear-gradient": "^14.0.1",
-    "expo-status-bar": "~2.0.0",
-    "react": "18.3.1",
-    "react-native": "0.76.5",
+    "email-validator": "^2.0.4",
+    "expo": "^53.0.0",
+    "expo-linear-gradient": "~14.1.5",
+    "expo-status-bar": "~2.2.3",
+    "firebase": "^11.2.0",
+    "react": "19.0.0",
+    "react-native": "0.79.3",
     "react-native-check-box": "^2.1.7",
-    "react-native-gesture-handler": "^2.21.2",
+    "react-native-gesture-handler": "~2.24.0",
     "react-native-phone-number-input": "^2.1.0",
-    "react-native-reanimated": "^3.16.6",
-    "react-native-safe-area-context": "^5.0.0",
-    "react-native-screens": "^4.4.0",
+    "react-native-reanimated": "~3.17.4",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.11.1",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.26.0"
   },
   "private": true
 }
